# learning-material-django

./: .gitignore  pyproject.toml  snipps.py
project/: db.sqlite3
project/config/: local_settings.sample.py  settings.py  urls.py
project/core/: context_processors.py  models.py  views.py
project/core/libs/: core_libs.py  error_handling.py  global_functions.py
project/course/: admin.py  models.py  urls.py  views.py
project/course/libs/: course_libs.py
project/course/migrations/: 0001_initial.py  0002_auto_20220125_2126.py  0003_lesson.py  0004_lesson_order.py  0005_auto_20220125_2204.py  0006_auto_20220125_2204.py  0007_auto_20220125_2212.py  0008_docs.py  0009_docs_read.py  0010_auto_20220125_2222.py  0011_docs_file.py  0012_lesson_url.py
project/material/: admin.py  models.py  urls.py  views.py
project/material/migrations/: 0001_initial.py  0002_auto_20210327_1458.py  0003_auto_20210327_1838.py  0004_auto_20210524_1546.py  0005_category.py  0006_material_category.py  0007_material_video.py  0008_auto_20210524_1610.py  0009_alter_subcategory_options.py
project/media/uploads/: 2.MOV
project/routine/: admin.py  models.py  urls.py  views.py
project/scripts/: clear_db.sh  migrate.sh
project/set_aside/material_app/: admin.py  urls.py
project/set_aside/material_template/: category.html  material.html  topics.html
project/templates/admin/: base_site.html
project/user/: admin.py  models.py  schema.py  translation.py
project/user_old/: 0001_initial.py  models.py
project/workout/: admin.py  forms.py  models.py  urls.py  views.py
(+36 files in other folders)
